Line chart fixed: now line colors match legend colors and it shows constant colors. Optional part completed: comparative study show multiple functions with different parameters between an interval. TSPGene now receives a wrapper boolean insteand of a primitive boolean. I added a couple of new utils classes to round up/down decimals and truncate decimals

--- a/src/application/application.css
+++ b/src/application/application.css
@@ -15,3 +15,7 @@
 .default-color0.chart-line-symbol { -fx-background-color: #e9967a, white; }
 .default-color1.chart-line-symbol { -fx-background-color: #f0e68c, white; }
 .default-color2.chart-line-symbol { -fx-background-color: #dda0dd, white; }
+
+.chart-legend-item-symbol{
+   -fx-background-radius: 0;
+}
